--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,13 @@
 }
 
 @theme inline {
+
+  --breakpoint-3xl: 1920px;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-chewy: var(--font-chewy)
 }
 
 @media (prefers-color-scheme: dark) {
